--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,17 @@
 # Loop through the dns object variable (see README.md)
 - name: Create DNS entries for site
-  route53: >
-    command=create 
-    zone="{{ item.0.zone }}"
-    record="{{ item.1.record }}"
-    type="{{ item.1.type }}"
-    ttl="{{ item.1.ttl }}"
-    value="{{ item.1.value }}"
-    overwrite=yes
+  local_action:
+    module: route53
+    aws_access_key: "{{ aws_access_key }}"
+    aws_secret_key: "{{ aws_secret_key }}"
+    command: create 
+    zone: "{{ item.0.zone }}"
+    record: "{{ item.1.record }}"
+    type: "{{ item.1.type }}"
+    ttl: "{{ item.1.ttl }}"
+    value: "{{ item.1.value }}"
+    overwrite: yes
+    profile: "{{ aws_profile }}"
   with_dict: dns
   with_subelements:
     - dns
